force-app/main/default/objects/CPS_Community_Partnership__c/CPS_Community_Partnership__c.object-meta.xml
<CustomObject>
    <label>Community Partnership</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Community Partnerships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>