force-app/main/default/objects/CPS_Community_Partnership__c/fields/Affiliations__c.field-meta.xml
<CustomField>
    <fullName>Affiliations__c</fullName>
    <label>Affiliation(s)</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AACA</fullName>
            </value>
            <value>
                <fullName>BATA</fullName>
            </value>
            <value>
                <fullName>BDEA</fullName>
            </value>
            <value>
                <fullName>BHA</fullName>
            </value>
            <value>
                <fullName>Board of Higher Ed</fullName>
            </value>
            <value>
                <fullName>Boston Public Schools</fullName>
            </value>
            <value>
                <fullName>Charlestown Adult Center  - Boston Housing Authority</fullName>
            </value>
            <value>
                <fullName>Henderson</fullName>
            </value>
            <value>
                <fullName>JVS</fullName>
            </value>
            <value>
                <fullName>Mass Rehab</fullName>
            </value>
            <value>
                <fullName>The BASE</fullName>
            </value>
            <value>
                <fullName>Work Incorporated (WORK Inc) – D-CAP</fullName>
            </value>
            <value>
                <fullName>Year UP</fullName>
            </value>
            <value>
                <fullName>YMCA</fullName>
            </value>
            <value>
                <fullName>YMCA International Center</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>